updated my info links

--- a/about.html
+++ b/about.html
@@ -114,10 +114,10 @@
         <img class="img-circle" src="img/devin.jpg">
         <h3>Devin Cunningham</h3>
         <div class="contactInfo">
-          <a href="#" target="_blank"  class="contactLink"><h4>GitHub</h4></a>
-          <a href="#" target="_blank"  class="contactLink"><h4>LinkedIn</h4></a>
-          <a href="#" class="contactLink"><h4>Email</h4></a>
-          <a href="#" target="_blank" class="contactLink"><h4>Website</h4></a>
+          <a href="https://github.com/DevinTyler26" target="_blank"  class="contactLink"><h4>GitHub</h4></a>
+          <a href="https://www.linkedin.com/in/devin-cunningham-9222314b/" target="_blank"  class="contactLink"><h4>LinkedIn</h4></a>
+          <a href="mailto:Dtyler.cunningham@gmail.com" class="contactLink"><h4>Email</h4></a>
+          <a href="https://dtcphoto.smugmug.com/" target="_blank" class="contactLink"><h4>Website</h4></a>
         </div>
         <p class="bio">Devin is a communications and marketing specialist for a local pediatric company focusing on creating advertisements and social media marketing. When he isn't behind the computer, he is either out creating videos, snowboarding, or hanging out on Lake Sammamish. Once he graduates Code Fellows, he wants to become the developer for the company where he works.</p>
       </div>
