extra course pricing correction

--- a/quote.html
+++ b/quote.html
@@ -78,7 +78,7 @@
         </div>
         <div class="column">
         <h2>Extra Courses:</h2>
-          <p>Multiply base price by two.</p>
+          <p>$10,000 per extra course.</p>
         </div>
         </div>
         <div class="column">
