fixed nav display issue

--- a/contact.html
+++ b/contact.html
@@ -12,9 +12,9 @@
 
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/hamburgers.css">
-    <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/contact.css">
+    <link rel="stylesheet" href="css/nav.css">
     <!-- Body font -->
     <link href="https://fonts.googleapis.com/css?family=Abel|Ubuntu" rel="stylesheet">
     <!-- Heading font -->
@@ -25,14 +25,18 @@
   </head>
   <body>
     <nav>
-      <img id="navLogo" alt="desgn worth logo" src="img/desgn-worth-logo.png">
+      <img id="navLogo" alt="desgn worth logo" src="img/desgn-worth-logo.png" />
       <div id="mainTopNav">
-        <button type="button" class="icon" id="hamburger">&#9776;</button>
+        <button type="button" class="hamburger hamburger--spin icon" id="hamburger">
+          <span class="hamburger-box">
+          <span class="hamburger-inner"></span>
+          </span>
+        </button>
         <div id="navLinks" class="topNav navHide">
-            <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
-            <a href="quote.html">Quote</a>
-            <a href="contact.html">Contact</a>
+          <a href="index.html">Home</a>
+          <a href="about.html">About Us</a>
+          <a href="quote.html">Quote</a>
+          <a href="contact.html">Contact</a>
         </div>
       </div>
     </nav>
