formatting and copy

--- a/about.html
+++ b/about.html
@@ -97,16 +97,16 @@
           <a href="#" class="contactLink"><h4>Email</h4></a>
           <a href="#" target="_blank" class="contactLink"><h4>Website</h4></a>
         </div>
-        <p class="bio">Hey there! I'm Eric. I grew up in a small town called Medford, OR and now live in Seattle. I'm planning on progressing through Code Fellows and becoming a full stack develper. I enjoy outdoor activities such as hiking, camping, fishing, rafting, as well as indoor activities like watching movies or playing games.</p>
+        <p class="bio">Eric grew up in a small town called Medford, OR and now lives in Seattle. He's planning on continuing through Code Fellows program and becoming a full-stack develper. When he's not coding, he enjoys outdoor activities such as hiking, camping, fishing, and rafting. He equally enjoys indoor activities such as watching movies or playing games.</p>
       </div>
     <div class="container2">
-        <img class="img-circle"  id="alicia"src="img/alicia1.jpg">
+        <img class="img-circle" id="alicia" src="img/alicia1.jpg">
         <h3>Alicia Lycan</h3>
         <div class="contactInfo">
-          <a href="#" target="_blank"  class="contactLink"><h4>GitHub</h4></a>
-          <a href="#" target="_blank"  class="contactLink"><h4>LinkedIn</h4></a>
-          <a href="#" class="contactLink"><h4>Email</h4></a>
-          <a href="#" target="_blank" class="contactLink"><h4>Website</h4></a>
+          <a href="https://github.com/alicialycan" target="_blank"  class="contactLink"><h4>GitHub</h4></a>
+          <a href="https://www.linkedin.com/in/alicialycan/" target="_blank"  class="contactLink"><h4>LinkedIn</h4></a>
+          <a href="mailto:alicialycan@gmail.com" class="contactLink"><h4>Email</h4></a>
+          <a href="http://shegoesinc.com/" target="_blank" class="contactLink"><h4>Website</h4></a>
         </div>
         <p class="bio">Alicia is a digital marketing specialist for a Bellevue-based insurance company focusing on curating content, social media, e-mail, and video marketing campaigns. Her entrepreneurial spirit inspired her to start her own business, She Goes Media, while in her senior year at Western Washington University, creating extreme sports and lifestyle content for a variety of companies. While Alicia enjoys the digital world, she is excited to shift her career into the technical world of full-stack web development. She loves the challenge and reward of writing and deploying code, and is looking forward to a career in software development once she finishes the Code Fellows program.</p>
       </div>
