--- a/quote.html
+++ b/quote.html
@@ -45,23 +45,23 @@
     <section id="intro" class="graySection">
       <image id="iqLogo" alt="invoquote logo" src="img/invoquote-logo-dark.png" />
       <h1>How Much Should a Website Cost, Anyway?</h1>
-      <p>Prices for websites vary quite a bit depending on what features you would like, but they do fall within a general range.</p>
+      <p>Our websites are personalized and adapted to your business needs and goals. While our cost falls within a general range, the final cost will depend on whether you would like to add additional items or services, and how quickly you would like your site completed.</p>
       <div class="row-site">
         <div class="column-site">
       <h2>Basic custom-designed websites<br>(5 pages): $5,000</h2>
-        <p>This option is best for designing a simple site from scratch. Your custom web design package will include a responsive design to fit your site automatically for mobile and tablet.</p>
+        <p>This option is best for a simple site designed from scratch. Your custom web design package will include a responsive design to fit your site optimized for both mobile and tablet devices.</p>
       </div>
       <div class="column-site">
       <h2>Complex eCommerce sites<br>(10 pages + first 5 products): $15,000</h2>
-        <p>This option is best for small businesses and clients who sell a service or product and require custom functionality for an online store. If you would like a high-quality, custom-built site with eCommerce functionality then this is the package for you!</p>
+        <p>This option is best for small businesses and clients who sell a service or product, and require custom functionality for an online store. If you would like a high-quality custom-built site with eCommerce functionality, then this is the package for you!</p>
       </div>
       <div class="column-site">
       <h2>Complex Membership sites<br>(5 pages + unlimited members): $15,000</h2>
-        <p>Looking to set up a site where your members can sign in securely and from anywhere? Our membership option is right for you.</p>
+        <p>Looking to set up a site with membership sign-in capabilities from anywhere? Then our membership option is right for you!</p>
       </div>
       <div class="column-site">
       <h2>Online Course sites<br>(5 pages + 1 Course): $15,000</h2>
-        <p>If you are looking to set up your learning course online, this option is for you. Fully responsive, custom built, and ready to help your students learn!</p>
+        <p>If you are looking to set up an online learning course, this option is for you. We will deliver a fully responsive custom built site ready to help your students learn!</p>
       </div>
       </div>
         <h1>Add Ons</h1>
@@ -69,12 +69,12 @@
           <div class="column">
         <h2>Extra Pages:</h2>
           <p>Additional pages cost</p>
-          <p>$150 each (minimum of 5)</p>
+          <p>$150 each (minimum: 5)</p>
         </div>
         <div class="column">
         <h2>Extra Products:</h2>
           <p>Additional products cost</p>
-          <p>$150 each (minimum of 5)</p>
+          <p>$150 each (minimum: 5)</p>
         </div>
         <div class="column">
         <h2>Extra Courses:</h2>
@@ -83,7 +83,7 @@
         </div>
         <div class="column">
         <h2>Rush Orders:</h2>
-          <p>The faster, the more expensive.</p>
+          <p>We can accomodate most time requests for an additional fee.</p>
         </div>
         </div>
         <h1>Base Timelines:</h1>
@@ -95,9 +95,9 @@
             <li>Online Course Website: 24 weeks</li>
           </ul>
         </div>
-        <h1>Other Services:</h1>
+        <h1>Additional Services:</h1>
         <div class="column">
-          <p>For other services such as marketing, review management, and website maintenance, we can give you a custom quote. Just make sure to indicate your interest as you go through InvoQuote.</p>
+          <p>For other services such as marketing, review management, and website maintenance, we can give you a custom quote. Make sure to indicate your interest as you go through InvoQuote.</p>
         </div>
     <h2>Ready to get your Quote?</h2>
     <button id="start">Let's Start!</button><br>
@@ -156,17 +156,17 @@
       </div>
       <div class="about-div" id="about-div">
         <img id="teamPortrait" src="img/grouptwo.jpg" alt="Design Worth Team" />
-        <p id="about" class="textIndent"><span id="name-italic">Desgn Worth</span> truly values you as a client and we are committed to delivering on-time, quality results. It is our goal as a team to ensure that you are completely satisfied with your project and that it fulfills the needs of your business. We are continually driven by the idea that our work is "for freelancers, by freelancers" and look forward to building your project!</p>
+        <p id="about" class="textIndent"><span id="name-italic">Desgn Worth</span> truly values you as a client and we are committed to delivering on-time, high quality results. It is our goal as a team to ensure you are completely satisfied with your website design, and that it fulfills the needs of your business. We are continually driven by the idea that our work is "for freelancers, by freelancers" and look forward to building your project next!</p>
       </div>
       <div id="breakdown">
         <h2>Strategy:</h2>
         <ul class="strategy-ul" id="strategy-ul">
-          <li>We receive your information and will schedule a follow up call to go over any questions about our service.<br> At this time we will discuss your goals, site design, brand concerns, and responsive options.</li>
-          <li>We will request any brand work, images, copy, and inspirational examples of styles you like to begin our wireframing process.</li>
-          <li>Next, we will send over a site layout and request approval or revisions at this time.</li>
-          <li>Over the next few weeks we will work on building your site and submit a final draft for your review.</li>
-          <li>Once the final site review (includes up to 2 revisions) is completed, we will make any revisions.</li>
-          <li>Website is ready to go live! Hooray!!</li>
+          <li>We have received your information and will schedule a follow up call to go over any questions you may have about our service.<br> At this time, we would like to discuss your goals, site design, brand concerns, and responsive options.</li>
+          <li>We will request any brand work, images, copy, and inspirational examples of styles you like in order to start our wireframing process.</li>
+          <li>Next, we will send you a site layout with a request for approval or revisions.</li>
+          <li>Over the next few weeks, we will work on building your site and submit a final draft for your review.</li>
+          <li>Once the final site review (including up to 2 additional revisions) is completed, we will make all necessary revisions.</li>
+          <li>Your website is ready to go live! Hooray!!</li>
         </ul>
         <h2>Original Timeline: <span id="timeline"></span></h2>
         <h2>Requested Timeline: <span id="reqTimeline"></span></h2>
@@ -185,7 +185,7 @@
       </div>
       <div id="movingForward">
         <h1>Moving Forward:</h1>
-        <p class="textIndent">Would you like to move forward with this project? Please click below to schedule an inital call with us. We would love to chat and get to know you more!<p>
+        <p class="textIndent">Would you like to move forward with this project? Please click below to schedule an inital call with us. We would love to chat and get to know you!<p>
         <a href="contact.html"><button>Let's Do It!</button></a>
       </div>
     </section>
