--- a/contact.html
+++ b/contact.html
@@ -47,16 +47,18 @@
       <div id='columnOne' class="column">
         <h2>Talk</h2>
         <h3>206-538-5058<br>
-        <a href="#">email</a>
+        <a href="mailto:alicialycan@gmail.com">email</a>
         </h3>
         <h2>Walk</h2>
         <h3>5439 Invoke Ave.<br>
         Seattle, WA 98107
         </h3>
         <h2>Stalk</h2>
-        <div id='socialLogos'>
+        <div class="socialLogos">
           <img id='instagram' src="img/instagram.png" alt="instagram">
-          <img id='facebook' src="img/facebook.png" alt="facebook">
+          <a href="https://www.facebook.com/DesgnWorth/" target="_blank">
+            <img id='facebook' src="img/facebook.png" alt="facebook">
+          </a>
         </div>
       </div>
       <div class="column">
