--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
       <p id="taglinetext">Try our app for sending out quotes to your potential clients instantly without any extra work on your part!</p>
       <a href="quote.html"> <button class="cta">Test Drive Our App Today!</button></a>
     </section>
-    <section class="bodycopy">
-      <p id="aboutText">Our app makes quotes easy for you and your clients! Our online form is quick and pain free, it guides your clients through a step by step process and asks them the questions you need to know to generate a real, professional quote. Once the form is filled out, your client will automatically be able to review their quote. At the same time, you will receive your clients info and will be able to schedule a follow up call.</p>
+    <section class="bodycopy" id='aboutText'>
+      <p>Our app makes quotes easy for agencies, companies, developers, and freelancers!</p>
+      <p>Our online form is a quick, pain-free process for your client covering the most important questions you need to know to generate a professional, customized quote.</p>
+      <p>Once the form is submitted, your client will be able to review their quote automatically. At the same time, you will receive your clients answers and be able to schedule a follow up call right away.</p>
     </section>
     <section class="test">
       <img class="img-circle" id="drake"  src="img/drake1.png">
