--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
       <div id='columnOne' class="column">
         <h2>Talk</h2>
         <h3>206-538-5058<br>
-        <a href="mailto:alicialycan@gmail.com">email</a>
+        <a href="mailto:alicialycan@gmail.com"><h3>email</h3></a>
         </h3>
         <h2>Walk</h2>
         <h3>5439 Invoke Ave.<br>
